third_party/llvm-project/clang-tools-extra/test/modularize/ProblemsNamespace.modularize
# RUN: not modularize %s -x c++ 2>&1 | FileCheck %s

Inputs/IncludeInNamespace.h

# CHECK: {{.*}}{{[/\\]}}Inputs{{[/\\]}}IncludeInNamespace.h:2:3:
# CHECK-NEXT:   #include "Empty.h"
# CHECK-NEXT:   ^
# CHECK-NEXT: error: Include directive within namespace MyNamespace {}.
# CHECK-NEXT: {{.*}}{{[/\\]}}Inputs{{[/\\]}}IncludeInNamespace.h:1:1:
# CHECK-NEXT: namespace MyNamespace {
# CHECK-NEXT: ^
# CHECK-NEXT: The "namespace MyNamespace {}" block is here.
